--- a/src/main/resources/components/projectPanel.fxml
+++ b/src/main/resources/components/projectPanel.fxml
@@ -7,40 +7,44 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
-<HBox fx:id="projectPanel" alignment="CENTER_LEFT" maxHeight="40.0" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectPanelController">
-    <AnchorPane id="gradienBox" fx:id="gradientBox" stylesheets="@../css/styles.css">
-        <HBox fx:id="projectInfo" alignment="CENTER_LEFT" prefHeight="40.0" spacing="20.0" stylesheets="@../css/styles.css">
-            <VBox.margin>
-                <Insets left="5.0" right="10.0" />
-            </VBox.margin>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" id="gradienBox"
+            fx:id="projectPanel" stylesheets="@../css/styles.css"
+            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectPanelController">
+    <HBox fx:id="projectInfo" alignment="CENTER_LEFT" prefHeight="40.0" spacing="20.0" stylesheets="@../css/styles.css">
+        <VBox.margin>
+            <Insets left="5.0" right="10.0"/>
+        </VBox.margin>
+        <HBox.margin>
+            <Insets/>
+        </HBox.margin>
+        <HBox id="projectIcon" fx:id="projectIcon" alignment="CENTER" maxWidth="50.0" minWidth="50.0" prefWidth="50.0"
+              styleClass="projectIcon" stylesheets="@../css/styles.css" HBox.hgrow="NEVER">
             <HBox.margin>
-                <Insets />
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
             </HBox.margin>
-            <HBox id="projectIcon" fx:id="projectIcon" alignment="CENTER" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" styleClass="projectIcon" stylesheets="@../css/styles.css" HBox.hgrow="NEVER">
-                <HBox.margin>
-                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                </HBox.margin>
-                <Text fx:id="projectIconText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="IJ" textAlignment="CENTER">
-                    <font>
-                        <Font name="JetBrainsMono NF Regular" size="13.0" />
-                    </font>
-                </Text>
-            </HBox>
-            <Label fx:id="projectTitleText" text="ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff" textFill="WHITE">
-                <HBox.margin>
-                    <Insets right="10.0" />
-                </HBox.margin>
-            </Label>
+            <Text fx:id="projectIconText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="IJ"
+                  textAlignment="CENTER">
+                <font>
+                    <Font name="JetBrainsMono NF Regular" size="13.0"/>
+                </font>
+            </Text>
         </HBox>
-        <VBox fx:id="run" alignment="CENTER" prefHeight="40.0" prefWidth="40.0">
+        <Label fx:id="projectTitleText" text="f" textFill="WHITE">
             <HBox.margin>
-                <Insets />
+                <Insets right="10.0"/>
             </HBox.margin>
-            <fx:include source="../icons/fxml/runButton.fxml" />
-        </VBox>
-        <VBox fx:id="config" alignment="CENTER" prefHeight="40.0" prefWidth="67.0">
-            <fx:include source="../icons/fxml/configurationButton.fxml" HBox.hgrow="ALWAYS" />
-        </VBox>
-    </AnchorPane>
-</HBox>
+        </Label>
+    </HBox>
+    <VBox fx:id="run" alignment="CENTER" prefHeight="40.0" prefWidth="40.0">
+        <HBox.margin>
+            <Insets/>
+        </HBox.margin>
+        <fx:include source="../icons/fxml/runButton.fxml"/>
+    </VBox>
+    <VBox fx:id="config" alignment="CENTER" prefHeight="40.0" prefWidth="67.0">
+        <fx:include source="../icons/fxml/configurationButton.fxml" HBox.hgrow="ALWAYS"/>
+    </VBox>
+    <VBox fx:id="star" alignment="CENTER" prefHeight="40.0" prefWidth="67.0">
+        <fx:include source="star.fxml" HBox.hgrow="ALWAYS"/>
+    </VBox>
+</AnchorPane>
