--- a/src/main/resources/components/projectsPanel.fxml
+++ b/src/main/resources/components/projectsPanel.fxml
@@ -4,15 +4,10 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane fitToWidth="true" fx:id="scrollPane" fitToHeight="true" hbarPolicy="NEVER" hmax="0.0"
-            nodeOrientation="RIGHT_TO_LEFT" prefHeight="1" styleClass="mainBG" stylesheets="@../css/styles.css"
-            xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectsPanelController">
+<ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" hmax="0.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="1" prefWidth="486.0" styleClass="mainBG" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectsPanelController">
     <padding>
-        <Insets bottom="5.0" top="5.0"/>
+        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
     </padding>
-    <VBox alignment="CENTER" fx:id="content" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" styleClass="mainBG"
-          stylesheets="@../css/styles.css">
-
+    <VBox fx:id="content" alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" styleClass="mainBG" stylesheets="@../css/styles.css">
     </VBox>
 </ScrollPane>
