--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -72,7 +72,7 @@
     -fx-flex-shrink: 0;
 }
 
-#projectPanel {
+.projectPanel {
     -fx-background-color: #2B2D30;
     -fx-pref-width: 400px;
     -fx-pref-height: 40px;
@@ -195,3 +195,8 @@
     -fx-text-fill: #DFE1E5;
     -fx-font-family: "JetBrains Mono";
 }
+
+/** {*/
+/*    -fx-border-width: 1px;*/
+/*    -fx-border-color: red;*/
+/*}*/
