--- a/src/main/resources/components/projectPanel.fxml
+++ b/src/main/resources/components/projectPanel.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <AnchorPane id="gradienBox" styleClass="projectPanel" fx:id="projectPanel" prefWidth="100.0"
-            stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            stylesheets="@/css/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectPanelController">
-    <HBox fx:id="projectInfo" alignment="CENTER_LEFT" prefHeight="40.0" spacing="20.0" stylesheets="@../css/styles.css">
+    <HBox fx:id="projectInfo" alignment="CENTER_LEFT" prefHeight="40.0" spacing="20.0" stylesheets="@/css/styles.css">
         <VBox.margin>
             <Insets left="5.0" right="10.0"/>
         </VBox.margin>
@@ -18,7 +18,7 @@
             <Insets/>
         </HBox.margin>
         <HBox id="projectIcon" fx:id="projectIcon" alignment="CENTER" maxWidth="50.0" minWidth="50.0" prefWidth="50.0"
-              styleClass="projectIcon" stylesheets="@../css/styles.css" HBox.hgrow="NEVER">
+              styleClass="projectIcon" stylesheets="@/css/styles.css" HBox.hgrow="NEVER">
             <HBox.margin>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
             </HBox.margin>
@@ -39,10 +39,10 @@
         <HBox.margin>
             <Insets/>
         </HBox.margin>
-        <fx:include source="../icons/fxml/runButton.fxml"/>
+        <fx:include source="/icons/fxml/runButton.fxml"/>
     </VBox>
     <VBox fx:id="config" onMouseClicked="#showProjectSetting" alignment="CENTER" prefHeight="40.0" prefWidth="67.0">
-        <fx:include source="../icons/fxml/configurationButton.fxml" HBox.hgrow="ALWAYS"/>
+        <fx:include source="/icons/fxml/configurationButton.fxml" HBox.hgrow="ALWAYS"/>
     </VBox>
     <fx:include fx:id="star" source="star.fxml" HBox.hgrow="ALWAYS"/>
 </AnchorPane>
