--- a/src/main/resources/components/settingsDropdown.fxml
+++ b/src/main/resources/components/settingsDropdown.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <AnchorPane id="settingsDropdown" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.SettingsDropdownController">
-    <VBox spacing="5.0" styleClass="popup" stylesheets="@../css/styles.css">
+    <VBox spacing="5.0" styleClass="popup" stylesheets="@/css/styles.css">
         <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
         </padding>
