--- a/src/main/resources/components/header.fxml
+++ b/src/main/resources/components/header.fxml
@@ -1,44 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Circle?>
-<?import javafx.scene.text.Text?>
 <AnchorPane id="header" fx:id="header" onMouseClicked="#handleHeaderMaximize" stylesheets="@/css/styles.css"
-            xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.HeaderController">
 
-    <!-- Left section with controls -->
-    <HBox id="gradientBox" fx:id="leftSection" alignment="CENTER_LEFT" layoutX="1.0" spacing="16"
-          AnchorPane.leftAnchor="1.0" AnchorPane.topAnchor="0.0">
-        <padding>
-            <Insets left="16" top="4" bottom="4"/>
-        </padding>
-        <HBox spacing="10" alignment="CENTER_LEFT">
-            <Circle fx:id="closeButton" fill="transparent" onMouseClicked="#handleClose" radius="5"
-                    styleClass="circle-close"/>
-            <Circle fx:id="minimizeButton" fill="transparent" onMouseClicked="#handleMinimize" radius="5"
-                    styleClass="circle-minimize"/>
-            <Circle fx:id="maximizeButton" fill="transparent" onMouseClicked="#handleMaximize" radius="5"
-                    styleClass="circle-maximize"/>
-        </HBox>
-        <HBox>
-            <StackPane styleClass="icon-button" onMouseClicked="#projects">
-                <fx:include source="/icons/fxml/folder.fxml"/>
-            </StackPane>
-            <StackPane fx:id="settingsButton" styleClass="icon-button" onMouseClicked="#dropdownForSettings">
-                <fx:include source="/icons/fxml/settings.fxml"/>
-            </StackPane>
-        </HBox>
-    </HBox>
+    <StackPane AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"
+               AnchorPane.leftAnchor="0.0">
 
-    <!-- Center section with title -->
-    <Text fx:id="titleText" fill="#ebecf0" strokeType="OUTSIDE" strokeWidth="0.0" text="Projects Manager"
-          AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="684.61376953125" AnchorPane.topAnchor="10.0"/>
+        <Label fx:id="titleText" textFill="#ebecf0" text="Projects Manager" textAlignment="CENTER"/>
 
-    <!-- Right section as an empty Region -->
-    <Region fx:id="rightSection" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0"/>
+        <HBox id="gradientBox" fx:id="leftSection" alignment="CENTER_LEFT" layoutX="1.0" spacing="16">
+            <padding>
+                <Insets left="16"/>
+            </padding>
+            <HBox spacing="10" alignment="CENTER_LEFT" fillHeight="false">
+                <Circle fx:id="closeButton" fill="transparent" onMouseClicked="#handleClose" radius="5"
+                        styleClass="circle-close"/>
+                <Circle fx:id="minimizeButton" fill="transparent" onMouseClicked="#handleMinimize" radius="5"
+                        styleClass="circle-minimize"/>
+                <Circle fx:id="maximizeButton" fill="transparent" onMouseClicked="#handleMaximize" radius="5"
+                        styleClass="circle-maximize"/>
+            </HBox>
+            <HBox>
+                <padding>
+                    <Insets top="4" bottom="4"/>
+                </padding>
+                <StackPane styleClass="icon-button" onMouseClicked="#projects">
+                    <fx:include source="/icons/fxml/folder.fxml"/>
+                </StackPane>
+                <StackPane fx:id="settingsButton" styleClass="icon-button" onMouseClicked="#dropdownForSettings">
+                    <fx:include source="/icons/fxml/settings.fxml"/>
+                </StackPane>
+            </HBox>
+        </HBox>
+    </StackPane>
+
 </AnchorPane>
