--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -12,10 +12,10 @@
 
 #gradientBox {
     -fx-background-color: linear-gradient(from 0% 0% to 100% 0%,
-    #2B2D30 0%,
+    transparent 0%,
     #344C7D 16.5%,
-    #2B2D30 33.0%,
-    #2B2D30 100%);
+    transparent 33.0%,
+    transparent 100%);
     -fx-pref-height: 40px;
     -fx-background-radius: 16px 0 0 0;
 }
@@ -173,7 +173,7 @@
     -fx-font-family: "JetBrains Mono";
 }
 
-/** {*/
-/*    -fx-border-width: 1px;*/
-/*    -fx-border-color: red;*/
-/*}*/
+* {
+    -fx-border-width: 1px;
+    -fx-border-color: red;
+}
