--- a/src/main/resources/components/projectsPanel.fxml
+++ b/src/main/resources/components/projectsPanel.fxml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.Insets?>
+<StackPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectsPanelController">
+    <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" hmax="0.0"
+                nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="486.0" styleClass="mainBG"
+                stylesheets="@/css/styles.css">
+        <VBox fx:id="content" alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" styleClass="mainBG"
+              stylesheets="@/css/styles.css">
+            <padding>
+                <Insets top="30" bottom="30"/>
+            </padding>
 
-<ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" hmax="0.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="1" prefWidth="486.0" styleClass="mainBG" stylesheets="@/css/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectsPanelController">
-    <padding>
-        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-    </padding>
-    <VBox fx:id="content" alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" styleClass="mainBG" stylesheets="@/css/styles.css">
-    </VBox>
-</ScrollPane>
+        </VBox>
+    </ScrollPane>
+    <Region fx:id="scrollShadow" prefHeight="40.0" styleClass="scroll-shadow" StackPane.alignment="BOTTOM_CENTER"/>
+    <Region fx:id="scrollShadowTop" prefHeight="40.0" styleClass="scroll-shadow-top" visible="false"
+            StackPane.alignment="TOP_CENTER"/>
+</StackPane>
