--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -165,10 +165,28 @@
 .scroll-pane > .scroll-bar .track {
     -fx-background-color: transparent;
 }
-
-.scroll-pane {
-    -fx-pref-height: 40em;
+.scroll-pane > .scroll-bar:vertical {
+    -fx-padding: 30 0 30 0;
 }
+
+.scroll-shadow {
+    -fx-background-color: linear-gradient(to bottom, rgba(30, 31, 34, 0.5), rgb(30, 31, 34));
+    -fx-pref-height: 30px;
+    -fx-max-height: 30px;
+    -fx-min-height: 30px;
+    -fx-background-insets: 0 10%;
+    -fx-background-radius: 0 0 16 16;
+}
+.scroll-shadow-top {
+    -fx-background-color: linear-gradient(to top, rgba(30, 31, 34, 0.5), rgb(30, 31, 34));
+    -fx-pref-height: 30px;
+    -fx-max-height: 30px;
+    -fx-min-height: 30px;
+    -fx-background-insets: 0 10%;
+    -fx-background-radius: 0 0 16 16;
+}
+
+
 
 .scroll-bar:vertical .thumb {
     -fx-background-color: rgba(255, 255, 255, 0.2);
