--- a/src/main/resources/components/star.fxml
+++ b/src/main/resources/components/star.fxml
@@ -3,8 +3,7 @@
 
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.SVGPath?>
-<StackPane fx:id="pane" xmlns:fx="http://javafx.com/fxml/1" prefWidth="1" prefHeight="1"
-           fx:controller="org.nevertouchgrass.prolific.javafxcontroller.StarController">
+<StackPane fx:id="pane" xmlns:fx="http://javafx.com/fxml/1" prefWidth="1" prefHeight="1">
     <SVGPath
             fx:id="star"
             content="M16.0005 3L19.439 11.2673L28.3642 11.9828L21.5641 17.8077L23.6417 26.5172L16.0005 21.85L8.35924 26.5172L10.4368 17.8077L3.63672 11.9828L12.5619 11.2673L16.0005 3Z"
