--- a/src/main/resources/components/projectsPanel.fxml
+++ b/src/main/resources/components/projectsPanel.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.geometry.Insets?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1"
            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectsPanelController"
            stylesheets="@/css/styles.css">
@@ -12,11 +11,10 @@
                 nodeOrientation="RIGHT_TO_LEFT" styleClass="mainBG">
         <VBox fx:id="content" alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0"
               styleClass="mainBG">
-            <padding>
-                <Insets top="30" bottom="30"/>
-            </padding>
         </VBox>
     </ScrollPane>
-    <Region fx:id="upperShadow" prefHeight="40" styleClass="upper-shadow" mouseTransparent="true" StackPane.alignment="TOP_CENTER" visible="false"/>
-    <Region fx:id="lowerShadow" prefHeight="40" styleClass="lower-shadow" mouseTransparent="true" StackPane.alignment="BOTTOM_CENTER"/>
+    <Region fx:id="upperShadow" prefHeight="40" styleClass="upper-shadow" mouseTransparent="true"
+            StackPane.alignment="TOP_CENTER" visible="false"/>
+    <Region fx:id="lowerShadow" prefHeight="40" styleClass="lower-shadow" mouseTransparent="true"
+            StackPane.alignment="BOTTOM_CENTER"/>
 </StackPane>
